[gd_scene load_steps=11 format=2]

[ext_resource path="res://scripts/ComputerLab.gd" type="Script" id=1]
[ext_resource path="res://assets/computador.png" type="Texture" id=2]
[ext_resource path="res://assets/bgWindow.png" type="Texture" id=3]
[ext_resource path="res://assets/icon_note.png" type="Texture" id=4]
[ext_resource path="res://assets/icon_block.png" type="Texture" id=5]
[ext_resource path="res://resources/theme_cinco.tres" type="Theme" id=6]
[ext_resource path="res://assets/light-2.png" type="Texture" id=8]

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 200, 20 )

[sub_resource type="Animation" id=5]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Light2D:energy")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 1.0 ]
}

[sub_resource type="Animation" id=4]
resource_name = "turnOff"
length = 1.6
tracks/0/type = "value"
tracks/0/path = NodePath("desktop:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.4, 0.6, 0.8, 1, 1.1, 1.2, 1.3, 1.4, 1.5, 1.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ false, true, false, true, false, true, false, true, false, true, false ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Light2D:energy")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1.6 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 1.0, 0.0 ]
}

[node name="ComputerLab" type="Sprite"]
texture = ExtResource( 3 )
offset = Vector2( 250, 250 )
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 250, 250 )
z_index = 1
texture = ExtResource( 2 )

[node name="block" type="Node2D" parent="."]

[node name="Label" type="Label" parent="block"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 80.0
margin_top = 192.0
margin_right = 440.0
margin_bottom = 235.0
theme = ExtResource( 6 )
text = "Intruduzca la contrase√±a"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LineEdit" type="LineEdit" parent="block"]
margin_left = 160.0
margin_top = 256.0
margin_right = 368.0
margin_bottom = 280.0
theme = ExtResource( 6 )
align = 1
max_length = 4
secret = true
caret_blink = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ButtonPassword" type="Button" parent="block"]
margin_left = 224.0
margin_top = 296.0
margin_right = 294.0
margin_bottom = 326.0
theme = ExtResource( 6 )
text = "Aceptar"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="desktop" type="Node2D" parent="."]
visible = false

[node name="Button" type="Button" parent="desktop"]
margin_left = 64.0
margin_top = 64.0
margin_right = 376.0
margin_bottom = 370.0
rect_scale = Vector2( 0.3, 0.3 )
focus_mode = 0
enabled_focus_mode = 0
icon = ExtResource( 4 )
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="WindowDialog" type="WindowDialog" parent="desktop"]
margin_left = 208.0
margin_top = 96.0
margin_right = 464.0
margin_bottom = 344.0
theme = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RichTextLabel" type="RichTextLabel" parent="desktop/WindowDialog"]
margin_left = 16.0
margin_top = 16.0
margin_right = 240.0
margin_bottom = 240.0
text = "Ya has despertado, bien. Para que puedas salir de este nivel en el siguiente icono del escritorio podras abrir el compartimiento atras de ti y la puerta del pasillo para que puedas subir. Te espero arriba."
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button2" type="Button" parent="desktop"]
margin_left = 64.0
margin_top = 192.0
margin_right = 276.0
margin_bottom = 398.0
rect_scale = Vector2( 0.5, 0.5 )
focus_mode = 0
enabled_focus_mode = 0
icon = ExtResource( 5 )
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AcceptDialog" type="ConfirmationDialog" parent="desktop"]
margin_left = 192.0
margin_top = 264.0
margin_right = 416.0
margin_bottom = 334.0
theme = ExtResource( 6 )
window_title = "Por favor, Confirma..."
dialog_text = " Abrir puerta"
dialog_autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Area2D" type="Area2D" parent="."]
position = Vector2( 248, 480 )
z_index = 2
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource( 3 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 5 )
anims/turnOff = SubResource( 4 )

[node name="Light2D" type="Light2D" parent="."]
position = Vector2( -216, -136 )
scale = Vector2( 1.984, 1.616 )
texture = ExtResource( 8 )
offset = Vector2( 250, 250 )

[connection signal="pressed" from="block/ButtonPassword" to="." method="_on_ButtonPassword_pressed"]
[connection signal="pressed" from="desktop/Button" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="desktop/Button2" to="." method="_on_Button2_pressed"]
[connection signal="confirmed" from="desktop/AcceptDialog" to="." method="_on_AcceptDialog_confirmed"]
[connection signal="input_event" from="Area2D" to="." method="_on_Area2D_input_event"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
